Fix footer/posts-nav width alignment, next-link positioning, footer layout
- Add width: 100% to page-container so it fills parent at all sizes
- Posts-nav now uses page-container class instead of custom width rules
- Fix next-post link left-aligned when no prev (margin-left: auto)
- Footer flex layout with flex:1/2/1 ratio for copyright/image/links
- Smaller copyright font-size to reduce left column pressure
- Footer stacks vertically below 900px

--- a/content/public/css/article.css
+++ b/content/public/css/article.css
@@ -115,29 +115,13 @@ article figure {
 }
 
 .posts-nav {
-  margin: 1.5em auto 0.75em auto;
-  padding: 1.5em var(--layout-padding) 0;
+  margin-top: 1.5em;
+  margin-bottom: 0.75em;
+  padding-top: 1.5em;
   border-top: 1px solid color-mix(in srgb, var(--theme-border-color) 50%, transparent);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: calc(100% - var(--layout-padding) * 2);
-  max-width: var(--layout-max-width);
-  box-sizing: border-box;
-}
-
-@media (min-width: 1400px) {
-  .posts-nav {
-    width: var(--layout-width-lg);
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-
-@media (min-width: 1600px) {
-  .posts-nav {
-    width: var(--layout-width-xl);
-  }
 }
 .posts-nav>span {
   display: flex;
@@ -156,6 +140,7 @@ article figure {
   grid-column-start: main-right-start;
   grid-column-end: full-end;
   text-align: right;
+  margin-left: auto;
 }
 
 @media (min-width: 1400px) {
