--- a/content/public/css/page-container.css
+++ b/content/public/css/page-container.css
@@ -1,4 +1,5 @@
 .page-container {
+  width: 100%;
   max-width: var(--layout-max-width);
   margin-left: auto;
   margin-right: auto;
